Begin ML 1.16.5 backport I guess